# pocket-failure-repair

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  environment.yml  pyproject.toml
configs/: AGENTS.md  README.md  environment_ml_optional.yml  eval_smoke_summary.yaml
configs/audit/: README.md  analysis_frozen_gate_v0_1.yaml  analysis_frozen_gate_v0_2.yaml  denominator_statistics_schema_v0_1.yaml  diagnosis_label_config_v0_1.yaml  diagnosis_label_config_v0_2.yaml  diagnosis_label_config_v0_3.yaml
configs/baselines/: repair_smoke.yaml  smoke.yaml
data/: AGENTS.md  README.md
docs/: AGENTS.md  CLAUDE.md  EXPERIMENT_LOG.md  README.md  STATUS.md  bibm_execution_notes.md  claude_goal_prompt.md  literature_matrix.md  method_design.md  optional_tool_notes.md  paper_draft.md  project_protocol.md  research_brief.md  smoke_data_manifest.md
experiments/: AGENTS.md  README.md
outputs/: AGENTS.md  README.md
patent/: AGENTS.md  README.md  cn_patent_draft.md  cn_patent_draft_revised.md  patent_agent_memo.md  technical_disclosure_outline.md
schemas/: AGENTS.md  README.md
scripts/: AGENTS.md  README.md
sources/: AGENTS.md  README.md
src/: AGENTS.md  README.md
tests/: AGENTS.md  README.md  test_audit_schemas.py  test_config_schema_refs.py  test_contact_degraded_generation.py  test_data_schema_refs.py  test_download_smoke_complexes.py  test_geometry_feedback.py  test_metrics.py  test_official_plip_gain.py  test_perturb.py  test_rdkit_scaffold.py  test_same_budget_audit.py  test_schema_io.py  test_smoke_pipeline.py  test_unified_evaluation_pipeline.py
(+550 files in other folders)
